adds image to pubs and team members

--- a/templates/Admin/admin_members_edit.html.twig
+++ b/templates/Admin/admin_members_edit.html.twig
@@ -33,6 +33,10 @@
                                             <input type="text" class="form-control" name="role" id="role" value="{{ teamMember.role }}" required placeholder="Position">
                                         </div>
                                         <div class="form-group">
+                                            <label for="formGroupExampleInput2">Image</label>
+                                            <input type="text" class="form-control" name="image" id="image" value="{{ teamMember.image }}" required placeholder="Image Link">
+                                        </div>
+                                        <div class="form-group">
                                             <label for="exampleFormControlTextarea1">Bio</label>
                                             <textarea class="form-control" id="bio" name="bio" rows="3" required placeholder="Description of person">{{ teamMember.bio }}</textarea>
                                         </div>
