--- a/templates/Pages/contact.html.twig
+++ b/templates/Pages/contact.html.twig
@@ -97,7 +97,7 @@
                                     <h5>Office Address</h5>
                                 </div>
                             </div>
-                            <p>San Francisco, CA 94126</p>
+                            <p>Community Pubs Ltd, 2 Mansfield Rd, NG17 4HR</p>
                         </li>
                         <li>
                             <div class="row">
