--- a/templates/Admin/admin_members.html.twig
+++ b/templates/Admin/admin_members.html.twig
@@ -33,6 +33,11 @@
                                             <input type="text" class="form-control" name="role" id="role" required placeholder="Position">
                                         </div>
                                         <div class="form-group">
+                                            <label for="formGroupExampleInput2">Image Link</label>
+                                            <input type="text" class="form-control" name="image" id="image" placeholder="Image Link">
+                                            <small class="form-text text-muted">Enter the link generated from <a href="http://imgur.com">imgur</a> here</small>
+                                        </div>
+                                        <div class="form-group">
                                             <label for="exampleFormControlTextarea1">Bio</label>
                                             <textarea class="form-control" id="bio" name="bio" rows="3" required placeholder="Description of person"></textarea>
                                         </div>
