--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -3,13 +3,13 @@
         <p class="m-0 text-center small mb-3">Copyright &copy; CLO Pubs LTD 2020</p>
         <div class="row text-center">
             <div class="col-4">
-                <a href="/"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
+                <a href="https://www.facebook.com/localcommunitypubs/"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
             </div>
             <div class="col-4">
                 <a href="/"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
             </div>
             <div class="col-4">
-                <a href="/"><i id="social-gp" class="fa fa-instagram fa-3x social"></i></a>
+                <a href="https://www.instagram.com/clopubsltd/"><i id="social-gp" class="fa fa-instagram fa-3x social"></i></a>
             </div>
         </div>
     </div>
