--- a/templates/Pages/home.html.twig
+++ b/templates/Pages/home.html.twig
@@ -34,7 +34,7 @@
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary btn-sm">Find a pub near you</a>
+                        <a href="/our-pubs" class="btn btn-primary btn-sm">Find a pub near you</a>
                     </div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary btn-sm">Find a job near you</a>
+                        <a href="/jobs" class="btn btn-primary btn-sm">Find a job near you</a>
                     </div>
                 </div>
             </div>
