--- a/templates/Pages/pubs.html.twig
+++ b/templates/Pages/pubs.html.twig
@@ -23,7 +23,7 @@
                                 <p class="font-italic text-muted mb-0 small">{{ pub.description }}</p>
                                 <div class="d-flex align-items-center justify-content-between mt-1">
                                     <h6 class="font-weight-bold my-2">{{ pub.town }}</h6>
-                                    <ul class="list-inline small">
+                                    <ul class="list-inline small pl-5">
                                         <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
                                         <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
                                         <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
@@ -34,7 +34,7 @@
                                 <a class="small" target="_blank" href="https://www.google.co.uk/maps/place/{{ pub.postcode }}">Get directions</a>
                             </div>
                             <img src="{{ pub.image }}"
-                                 alt="Generic placeholder image" width="200" class="ml-lg-5 order-1 order-lg-2">
+                                 alt="Generic placeholder image" class="ml-lg-5 order-1 order-lg- pub-image">
                         </div>
                         <!-- End -->
                     </li>
