--- a/templates/Pages/pubs.html.twig
+++ b/templates/Pages/pubs.html.twig
@@ -28,7 +28,7 @@
                                         <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
                                         <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
                                         <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
-                                        <li class="list-inline-item m-0"><i class="fa fa-star-o text-gray"></i></li>
+                                        <li class="list-inline-item m-0"><i class="fa fa-star star-bg"></i></li>
                                     </ul>
                                 </div>
                                 <a class="small" target="_blank" href="https://www.google.co.uk/maps/place/{{ pub.postcode }}">Get directions</a>
