changes homepage text

--- a/templates/Pages/home.html.twig
+++ b/templates/Pages/home.html.twig
@@ -10,9 +10,10 @@
             </div>
             <!-- /.col-lg-8 -->
             <div class="col-lg-5">
-                <h1 class="font-weight-light">CLO Pubs LTD</h1>
-                <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
-                <a class="btn btn-primary" href="#">Call to Action!</a>
+                <h1 class="">CLO Pubs LTD</h1>
+                <p>Welcome to CLO Pubs, we are a family run Business established in 2005.</p>
+                <p>We take great pride in giving back to areas across the UK what they treasure most, community pubs.</p>
+                <a class="btn btn-primary" href="/contact-us">Contact us!</a>
             </div>
             <!-- /.col-md-4 -->
         </div>
@@ -28,10 +29,10 @@
         <!-- Content Row -->
         <div class="row">
             <div class="col-md-4 mb-5">
-                <div class="card h-100">
+                <div class="card h-100 shadow">
                     <div class="card-body">
                         <h2 class="card-title">Our Pubs</h2>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                        <p class="card-text">Please take a look & visit one of our many sites cross the UK, where you will be warmly welcomed by one of our fantastic team members!</p>
                     </div>
                     <div class="card-footer">
                         <a href="/our-pubs" class="btn btn-primary btn-sm">Find a pub near you</a>
@@ -40,10 +41,10 @@
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4 mb-5">
-                <div class="card h-100">
+                <div class="card h-100 shadow">
                     <div class="card-body">
                         <h2 class="card-title">Meet The Team</h2>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
+                        <p class="card-text">Take a look through the team behind the scenes at CLO Pubs and get to know the people who do their best to give back to local communities that surround our sites.</p>
                     </div>
                     <div class="card-footer">
                         <a href="/our-team" class="btn btn-primary btn-sm">Meet the team</a>
@@ -52,12 +53,12 @@
             </div>
             <!-- /.col-md-4 -->
             <div class="col-md-4 mb-5">
-                <div class="card h-100">
+                <div class="card h-100 shadow">
                     <div class="card-body">
                         <h2 class="card-title">Jobs</h2>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                        <p class="card-text">Is the pub life for you? Take a look at our available vacancies and apply within. If you have any further questions please feel free to contact us.</p>
                     </div>
-                    <div class="card-footer">
+                    <div class="card-footer shadow">
                         <a href="/jobs" class="btn btn-primary btn-sm">Find a job near you</a>
                     </div>
                 </div>
