--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -13,5 +13,5 @@
             </div>
         </div>
     </div>
-    <p class="small text-center mt-4">Always drink responsibly, for drinking advice please visit  <a target="_blank" href="https://www.drinkaware.co.uk/">Drink Aware</a></p>
+    <p class="small text-center mt-4 pr-3 pl-3">Always drink responsibly, for drinking advice please visit  <a target="_blank" href="https://www.drinkaware.co.uk/">Drink Aware</a></p>
 </footer>
