--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,7 +1,7 @@
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 
 body {
-    background-color: #f6f6f6;
+    background-color: #eeeeee !important;
 }
 
 .footer {
@@ -25,7 +25,7 @@ body {
 /* Contact us form */
 
 #team {
-    background: #eee !important;
+    background: #eeeeee !important;
 }
 
 .btn-primary:hover,
@@ -43,7 +43,7 @@ body {
 }
 
 section {
-    padding: 60px 0;
+    padding: 30px 0;
 }
 
 section .section-title {
