--- a/templates/Pages/contact.html.twig
+++ b/templates/Pages/contact.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="container">
         <section class="mb-4">
-            <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
+            <h2 class="h1-responsive font-weight-bold text-center my-3">Contact us</h2>
             <!--Section description-->
             <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to
                 contact us directly. Our team will come back to you within
@@ -99,7 +99,7 @@
                                     <h5>Office Number</h5>
                                 </div>
                             </div>
-                            <p>+ 01 234 567 89</p>
+                            <p>01623 551470</p>
                         </li>
 
                         <li>
@@ -113,7 +113,7 @@
                                     <h5>Office Email</h5>
                                 </div>
                             </div>
-                            <p>contact@mdbootstrap.com</p>
+                            <p>clopubs@yahoo.com</p>
                         </li>
                         <li>
                             <div class="row">
