--- a/templates/Pages/apply.html.twig
+++ b/templates/Pages/apply.html.twig
@@ -10,11 +10,15 @@
         <div class="col-lg-12">
             <form method="post" action="/job/send">
                 <div class="form-row pb-3">
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-4">
                         <label for="inputNamel4">Full Name</label>
                         <input type="name" class="form-control" id="name" name="name" required placeholder="Name">
                     </div>
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-4">
+                        <label for="inputNamel4">Contact Number</label>
+                        <input type="name" class="form-control" id="number" name="number" required placeholder="Contact Number">
+                    </div>
+                    <div class="form-group col-md-4">
                         <label for="inputEmail4">Email</label>
                         <input type="email" class="form-control" id="email" name="email" required placeholder="Email">
                     </div>
