--- a/templates/Pages/contact.html.twig
+++ b/templates/Pages/contact.html.twig
@@ -6,8 +6,7 @@
             <h2 class="h1-responsive font-weight-bold text-center my-3">Contact us</h2>
             <!--Section description-->
             <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to
-                contact us directly. Our team will come back to you within
-                a matter of hours to help you.</p>
+                contact us directly. We will get back in touch with you as soon as we can.</p>
 
             {% for label, flashes in app.session.flashbag.all %}
                 {% for flash in flashes %}
