--- a/templates/Pages/jobs.html.twig
+++ b/templates/Pages/jobs.html.twig
@@ -38,9 +38,15 @@
                     </li>
                     {% endfor %}
                     {% else %}
-                        <div>
-                            <h2 class="text-center pb-2">Sorry, we don't have any vacancies at the moment.</h2>
-                            <h5 class="text-center mb-5">please check back later and keep an eye on our <a href="https://www.facebook.com/localcommunitypubs/">Facebook page<a> for updates</h5>
+                        <div class="container py-5">
+                            <div class="text-center mb-5 mt-2">
+                                <h1 class="display-3">Sorry!</h1>
+                                <p class="lead"><strong>We currently don't have any vacancies at the moment. </strong>Please check back later and keep an eye on our <a href="https://www.facebook.com/localcommunitypubs/">Facebook page<a> for updates</p>
+                                <hr>
+                                <p class="lead">
+                                    <a class="btn btn-primary btn-sm" href="/" role="button">Return to homepage</a>
+                                </p>
+                            </div>
                         </div>
                     {% endif %}
             </ul>
