adds warning about deleting job

--- a/templates/Admin/admin_jobs.html.twig
+++ b/templates/Admin/admin_jobs.html.twig
@@ -109,6 +109,8 @@
                                                 </tbody>
                                             </table>
                                         </div>
+                                        <small class="text-danger"><b>Be aware</b>, deleting a job advert will also delete all applicants linked to the job.</small><br>
+                                        <small class="text-danger"> To stop a job showing on the website, simply edit it and untick the active box.</small>
                                     </div>
                                 </div>
                             </div>
