--- a/templates/Admin/admin_pubs.html.twig
+++ b/templates/Admin/admin_pubs.html.twig
@@ -43,7 +43,7 @@
                                         </div>
                                         <div class="form-group">
                                             <label for="exampleFormControlTextarea1">Description</label>
-                                            <textarea class="form-control" id="description" name="description" rows="3" placeholder="Description of person / position"></textarea>
+                                            <textarea class="form-control" id="description" name="description" rows="3" placeholder="Description"></textarea>
                                         </div>
                                         <button type="submit" class="btn blue-background text-white mb-2">Add Pub</button>
                                     </form>
