--- a/templates/Pages/jobs.html.twig
+++ b/templates/Pages/jobs.html.twig
@@ -40,7 +40,7 @@
                     {% else %}
                         <div class="container py-5">
                             <div class="text-center mb-5 mt-2">
-                                <h1 class="display-3">Sorry!</h1>
+                                <h1 class="h1-responsive font-weight-bold text-center">Sorry!</h1>
                                 <p class="lead"><strong>We currently don't have any vacancies at the moment. </strong>Please check back later and keep an eye on our <a href="https://www.facebook.com/localcommunitypubs/">Facebook page<a> for updates</p>
                                 <hr>
                                 <p class="lead">
