--- a/templates/Pages/pubs.html.twig
+++ b/templates/Pages/pubs.html.twig
@@ -4,9 +4,7 @@
     <div class="container py-4">
         <div class="team-header text-center">
             <h2 class="h1-responsive font-weight-bold text-center my-3">Our Pubs</h2>
-            <p class="mb-5">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+            <p class="mb-5">Here at CLO Pubs we manage numerous community driven pubs across the country, why not pop in and give us a visit?</p>
         </div>
         <div class="row">
             <div class="col-lg-10 mx-auto">
