--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,11 +1,16 @@
 <!doctype html>
 <head>
     <meta charset="utf-8">
+    <meta property="og:title" content="CLO Pubs LTD">
+    <meta property="og:description" content="Bringing back community pubs.">
+    <meta property="og:image" content="https://media-cdn.tripadvisor.com/media/photo-s/0d/92/1a/cb/the-cluricaune-irish.jpg">
+    <meta property="og:url" content="https://www.clopubs.co.uk">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>{{ pageTitle }}</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     {{ encore_entry_link_tags('app-css') }}
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
