--- a/templates/Pages/home.html.twig
+++ b/templates/Pages/home.html.twig
@@ -6,7 +6,7 @@
         <!-- Heading Row -->
         <div class="row align-items-center my-5">
             <div class="col-lg-7">
-                <img class="img-fluid rounded mb-4 mb-lg-0" src="https://media-cdn.tripadvisor.com/media/photo-s/0d/92/1a/cb/the-cluricaune-irish.jpg" alt="">
+                <img class="img-fluid rounded mb-4 mb-lg-0 shadow" src="https://i.imgur.com/cSxDDlp.jpg" alt="">
             </div>
             <!-- /.col-lg-8 -->
             <div class="col-lg-5">
