centers homepage text

--- a/templates/Pages/home.html.twig
+++ b/templates/Pages/home.html.twig
@@ -9,8 +9,8 @@
                 <img class="img-fluid rounded mb-4 mb-lg-0 shadow" src="https://i.imgur.com/cSxDDlp.jpg" alt="">
             </div>
             <!-- /.col-lg-8 -->
-            <div class="col-lg-5">
-                <h1 class="">CLO Pubs LTD</h1>
+            <div class="col-lg-5 text-center">
+                <h1>CLO Pubs LTD</h1>
                 <p>Welcome to CLO Pubs, we are a family run Business established in 2009.</p>
                 <p>We take great pride in giving back to areas across the UK what they treasure most, community pubs.</p>
                 <a class="btn btn-primary" href="/contact-us">Contact us!</a>
