changes opening hours and contact number

--- a/templates/Pages/contact.html.twig
+++ b/templates/Pages/contact.html.twig
@@ -85,7 +85,7 @@
                                     <h5>Office Address</h5>
                                 </div>
                             </div>
-                            <p>Community Pubs Ltd, 2 Mansfield Rd, NG17 4HR</p>
+                            <p>CLO Pubs Ltd <br> First Floor Offices <br> 3 Phoenix House <br> Mansfield Road <br> NG17 4HR</p>
                         </li>
                         <li>
                             <div class="row">
@@ -98,7 +98,7 @@
                                     <h5>Office Number</h5>
                                 </div>
                             </div>
-                            <p>01623 551470</p>
+                            <p>01623 468717</p>
                         </li>
 
                         <li>
@@ -129,7 +129,7 @@
                             <p class="m-0">Tuesday: 9am - 4pm</p>
                             <p class="m-0">Wednesday: 9am - 4pm</p>
                             <p class="m-0">Thursday: 9am - 4pm</p>
-                            <p class="mb-1">Friday: 9am - 4pm</p>
+                            <p class="mb-1">Friday: 9am - 1pm</p>
                             <p>Weekends: Closed</p>
                         </li>
                     </ul>
