fixes spelling mistake

--- a/templates/Pages/jobs.html.twig
+++ b/templates/Pages/jobs.html.twig
@@ -4,7 +4,7 @@
     <div class="container py-4">
         <div class="team-header text-center">
             <h2 class="h1-responsive font-weight-bold text-center my-3">Jobs</h2>
-            <p class="mb-2">Here at CLO Pubs we off a wide range of opportunities,
+            <p class="mb-2">Here at CLO Pubs we offer a wide range of opportunities,
                 here is a list of our current vacancies. Please click apply now and fill out the application form if you are interested in a specific role.
             </p>
             <p class="mb-4">If you have any questions please do not hesitate to contact us.</p>
