--- a/templates/Admin/admin_applicants_view.html.twig
+++ b/templates/Admin/admin_applicants_view.html.twig
@@ -20,7 +20,7 @@
                             <div class="card mb-4">
                                 <div class="card-header">
                                     <i class="fas fa-chart-bar mr-1"></i>
-                                    <b>Brad Waterhouse</b>
+                                    <b>Applicant</b>
                                 </div>
                                 <div class="card-body">
                                     <div class="form-row col-12 mb-4">
