--- a/templates/Pages/home.html.twig
+++ b/templates/Pages/home.html.twig
@@ -4,16 +4,16 @@
     <div class="container">
 
         <!-- Heading Row -->
-        <div class="row align-items-center my-5">
-            <div class="col-lg-7">
-                <img class="img-fluid rounded mb-4 mb-lg-0 shadow" src="https://i.imgur.com/cSxDDlp.jpg" alt="">
-            </div>
+        <div class="row align-items-center my-2 mb-2">
             <!-- /.col-lg-8 -->
             <div class="col-lg-5 text-center">
-                <h1>CLO Pubs LTD</h1>
+                <img class="logo-homepage" width="70%" src="https://i.ibb.co/tpZHJvR/clo-pubs-logo.png" alt="logo">
                 <p>Welcome to CLO Pubs, we are a family run Business established in 2009.</p>
                 <p>We take great pride in giving back to areas across the UK what they treasure most, community pubs.</p>
-                <a class="btn btn-primary" href="/contact-us">Contact us!</a>
+                <a class="btn btn-primary mb-3" href="/contact-us">Contact us!</a>
+            </div>
+            <div class="col-lg-7">
+                <img class="img-fluid rounded mb-4 mb-lg-0 shadow" src="https://i.ibb.co/Cbfjz2c/cSxDDlp.jpg" alt="pub">
             </div>
             <!-- /.col-md-4 -->
         </div>
