--- a/templates/Pages/home.html.twig
+++ b/templates/Pages/home.html.twig
@@ -3,28 +3,18 @@
 {% block content %}
     <div class="container">
 
-        <!-- Heading Row -->
         <div class="row align-items-center my-2 mb-2">
-            <!-- /.col-lg-8 -->
-            <div class="col-lg-5 text-center">
+            <div class="col-lg-3"></div>
+
+            <div class="col-lg-6 text-center">
                 <img class="logo-homepage" width="70%" src="https://i.ibb.co/tpZHJvR/clo-pubs-logo.png" alt="logo">
                 <p>Welcome to CLO Pubs, we are a family run Business established in 2009.</p>
                 <p>We take great pride in giving back to areas across the UK what they treasure most, community pubs.</p>
                 <a class="btn btn-primary mb-3" href="/contact-us">Contact us!</a>
             </div>
-            <div class="col-lg-7">
-                <img class="img-fluid rounded mb-4 mb-lg-0 shadow" src="https://i.ibb.co/Cbfjz2c/cSxDDlp.jpg" alt="pub">
-            </div>
-            <!-- /.col-md-4 -->
-        </div>
-        <!-- /.row -->
 
-{#        <!-- Call to Action Well -->#}
-{#        <div class="card text-white bg-secondary my-5 py-4 text-center">#}
-{#            <div class="card-body">#}
-{#                <p class="text-white m-0">This call to action card is a great place to showcase some important information or display a clever tagline!</p>#}
-{#            </div>#}
-{#        </div>#}
+            <div class="col-lg-3"></div>
+        </div>
 
         <!-- Content Row -->
         <div class="row">
