--- a/templates/Pages/jobs.html.twig
+++ b/templates/Pages/jobs.html.twig
@@ -5,50 +5,58 @@
         <div class="team-header text-center">
             <h2 class="h1-responsive font-weight-bold text-center my-3">Jobs</h2>
             <p class="mb-2">Here at CLO Pubs we offer a wide range of opportunities,
-                here is a list of our current vacancies. Please click apply now and fill out the application form if you are interested in a specific role.
+                here is a list of our current vacancies. Please click apply now and fill out the application form if you
+                are interested in a specific role.
             </p>
-            <p class="mb-4">If you have any questions please do not hesitate to contact us.</p>
+            
+            <img class="mt-2" src="https://svgur.com/i/hYv.svg" width="90">
+            <p class="mb-1 mt-2">Leaving the army and looking for a change in career?</p>
+            <p> Why not join our team and run your own pub?</p>
         </div>
         <div class="col-lg-10 mx-auto">
             <ul class="list-group">
                 {% if jobs|length > 0 %}
                     {% for job in jobs %}
-                    <li class="list-group-item mb-5 shadow">
-                        <div class="media align-items-lg-center flex-column flex-lg-row p-3">
-                            <div class="media-body order-2 order-lg-1">
-                                <h4 class="mt-0 font-weight-bold mb-2 pt-3">{{ job.job.role }}</h4>
-                                <h5 class="mt-0 font-weight-bold mb-2 pt-3">{{ job.job.title }} - {{ job.job.town }}</h5>
-                                <p class="mb-0 small">{{ job.job.description }}</p>
-                                <h6 class="mt-0 font-weight-bold pt-3">{{ job.job.salary }}</h6>
-                                <h5 class="pt-3">Expectations</h5>
-                                <ul>
-                                    {%  for expectation in job.expectations %}
-                                     <li>{{ expectation }}</li>
-                                    {% endfor %}
-                                </ul>
-                                <h5 class="pt-3">Experience</h5>
-                                <ul>
-                                    {%  for requirement in job.requirements %}
-                                        <li>{{ requirement }}</li>
-                                    {% endfor %}
-                                </ul>
-                                <a href="/job/{{ job.job.id }}/apply" class="btn btn-primary mt-4">Apply now</a>
+                        <li class="list-group-item mb-5 shadow">
+                            <div class="media align-items-lg-center flex-column flex-lg-row p-3">
+                                <div class="media-body order-2 order-lg-1">
+                                    <h4 class="mt-0 font-weight-bold mb-2 pt-3">{{ job.job.role }}</h4>
+                                    <h5 class="mt-0 font-weight-bold mb-2 pt-3">{{ job.job.title }}
+                                        - {{ job.job.town }}</h5>
+                                    <p class="mb-0 small">{{ job.job.description }}</p>
+                                    <h6 class="mt-0 font-weight-bold pt-3">{{ job.job.salary }}</h6>
+                                    <h5 class="pt-3">Expectations</h5>
+                                    <ul>
+                                        {% for expectation in job.expectations %}
+                                            <li>{{ expectation }}</li>
+                                        {% endfor %}
+                                    </ul>
+                                    <h5 class="pt-3">Experience</h5>
+                                    <ul>
+                                        {% for requirement in job.requirements %}
+                                            <li>{{ requirement }}</li>
+                                        {% endfor %}
+                                    </ul>
+                                    <a href="/job/{{ job.job.id }}/apply" class="btn btn-primary mt-4">Apply now</a>
+                                </div>
                             </div>
-                        </div>
-                    </li>
+                        </li>
                     {% endfor %}
-                    {% else %}
-                        <div class="container py-5">
-                            <div class="text-center mb-5 mt-2">
-                                <h1 class="h1-responsive font-weight-bold text-center">Sorry!</h1>
-                                <p class="lead"><strong>We currently don't have any vacancies at the moment. </strong>Please check back later and keep an eye on our <a href="https://www.facebook.com/localcommunitypubs/">Facebook page<a> for updates</p>
-                                <hr>
-                                <p class="lead">
-                                    <a class="btn btn-primary btn-sm" href="/" role="button">Return to homepage</a>
-                                </p>
-                            </div>
+                {% else %}
+                    <div class="container py-5">
+                        <div class="text-center mb-5 mt-2">
+                            <h1 class="h1-responsive font-weight-bold text-center">Sorry!</h1>
+                            <p class="lead"><strong>We currently don't have any vacancies at the moment. </strong>Please
+                                check back later and keep an eye on our <a
+                                        href="https://www.facebook.com/localcommunitypubs/">Facebook page<a> for updates
+                            </p>
+                            <hr>
+                            <p class="lead">
+                                <a class="btn btn-primary btn-sm" href="/" role="button">Return to homepage</a>
+                            </p>
                         </div>
-                    {% endif %}
+                    </div>
+                {% endif %}
             </ul>
         </div>
     </div>
